--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Campominato-Grid</title>
 </head>
 <body>
+
+    <!-- struttura header -->
     <header>
        <div class="logo">
             <img src="img/logo.jpg" alt="immagine logo">
@@ -16,6 +18,14 @@
             <button>Play</button>
        </div>
     </header>
+
+    <!-- struttura main -->
+    <main>
+        <div class="container">
+            
+        </div>
+
+    </main>
     
 
     <script src="js/script.js"></script>
