--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
     <!-- struttura main -->
     <main>
         <div class="container">
-            
+
         </div>
 
     </main>
+
+    <!-- struttura footer -->
+    <footer>
+        <span>Made with &hearts; by  <a href="#"> Boolean</a></span>
+    </footer>
     
 
     <script src="js/script.js"></script>
