add: click function

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <img src="img/logo.jpg" alt="immagine logo">
             <h1>Campo Minato</h1>
        </div>
-       <div class="play">
-            <button>Play</button>
+       <div>
+            <button class="play">Play</button>
        </div>
     </header>
 
